Fixed issue with the sidebar displaying 00 instead of No Due Date

--- a/public/index.html
+++ b/public/index.html
@@ -239,11 +239,14 @@ function createSublists(todos) {
   todos.forEach(function (todo) {
     const month = todo.month;
     const year = todo.year;
-    const dueDate = month && year ? `${month}/${year.slice(-2)}` : 'No Due Date';
+    const dueDate = (month === '00' || year === '00') ? 'No Due Date' : (month && year) ? `${month}/${year.slice(-2)}` : 'No Due Date';
 
-    if (!sublists[dueDate]) {sublists[dueDate] = []};
+    if (!sublists[dueDate]) {
+      sublists[dueDate] = [];
+    }
     sublists[dueDate].push(todo);
   });
+
   displaySublistsOnSidebar(sublists);
   displaySublistsOnContent(sublists);
 }
@@ -299,7 +302,7 @@ function createCompletedSublists(todos) {
     if (todo.completed) {
       const month = todo.month;
       const year = todo.year;
-      const dueDate = month && year ? `${month}/${year.slice(-2)}` : 'No Due Date';
+      const dueDate = (month === '00' || year === '00') ? 'No Due Date' : (month && year) ? `${month}/${year.slice(-2)}` : 'No Due Date';
 
       if (!sublists[dueDate]) { sublists[dueDate] = []; }
       sublists[dueDate].push(todo);
