--- a/public/index.html
+++ b/public/index.html
@@ -5,165 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Todo App</title>
-  <!-- <link rel="stylesheet" href="/stylesheets/style.css"> -->
+  <link rel="stylesheet" href="/stylesheets/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-...your-sha512-hash-here..." crossorigin="anonymous" />
-<style>
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 20px;
-  background-color: #f0f0f0;
-}
-
-h1 {
-  margin: 0;
-  padding: 20px 0;
-  font-size: 24px;
-  text-align: center;
-}
-
-h2 {
-  font-size: 18px;
-}
-
-h3 {
-  margin: 0;
-  padding-bottom: 10px;
-  font-size: 18px;
-  font-weight: normal;
-}
-
-h4 {
-  font-size: 14px;
-  font-weight: normal;
-}
-
-h4 a,
-h1 a {
-  color: inherit;
-  text-decoration: none;
-}
-
-h6 {
-  font-weight: normal;
-}
-
-p#addTodo {
-  margin-top: 10px;
-}
-
-#modal-overlay {
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 1; /* Ensure the modal overlay appears above other elements */
-}
-
-#modal {
-  display: none;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: #fff;
-  padding: 20px;
-  border-radius: 5px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-}
-
-#sidebar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 200px;
-  height: 100%;
-  background-color: #d7d7d7;
-  padding: 20px;
-}
-
-#sidebar h2 {
-  margin-top: 0;
-  color: #333;
-}
-
-#sidebar ul {
-  list-style: none;
-  padding: 0;
-  margin: 20px 0;
-}
-
-#sidebar li {
-  margin-bottom: 10px;
-}
-
-#sidebar li a {
-  text-decoration: none;
-  color: #333;
-}
-
-#sidebar li a.active {
-  font-weight: bold;
-}
-
-#content {
-  margin-left: 220px;
-  padding: 20px;
-}
-
-.todo {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin-bottom: 10px;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 3px;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
-}
-
-.todo-text {
-  font-size: 16px;
-}
-
-.todo:hover {
-  background-color: #e0e0e0;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3); /* Add box shadow for highlighting effect */
-}
-
-.todo-text:hover,
-#addTodo {
-  color: #336699;
-}
-
-.todo button {
-  background-color: #f0f0f0;
-  color: #A6A9AB;
-  border: none;
-  border-radius: 3px;
-  cursor: pointer;
-}
-
-.todo button:hover {
-  background-color: #E16F63;
-}
-
-.todo.completed {
-  background-color: #f0f0f0;
-  text-decoration: line-through;
-}
-
-.todo.completed button {
-  background-color: #4caf50;
-}
-
-span.todo-count {
-  font-weight: bold;
-}    
-</style>
 </head>
 <body>
   <div id="sidebar">
@@ -747,7 +590,6 @@ for (let year = currentYear; year <= nextDecade; year++) {
   option.textContent = year;
   dueYearSelect.appendChild(option);
 }
-
   </script>
 </body>
 </html>
