logic to refresh website to re-display homepage/all todos after new todo is added

--- a/public/index.html
+++ b/public/index.html
@@ -454,9 +454,10 @@ function addNewTodo() {
     if (xhr.readyState === 4) {
       if (xhr.status === 201) {
         const response = JSON.parse(xhr.responseText);
+        console.log('response: ', response);
         alert('Todo saved successfully!');
         hideModal();
-        fetchUpdatesForSidebar();
+        location.reload();
       } else {
         alert('Todo cannot be saved.');
       }
